test/types/records/bad-change-type/init-new-arg-changes-type1.good
init-new-arg-changes-type1.chpl:12: error: named argument 't' provided twice
